--- a/src/components/card-index/card-index.astro
+++ b/src/components/card-index/card-index.astro
@@ -3,7 +3,8 @@ import Section from "@layouts/Section.astro";
 import Card from "@components/card-index/card.astro";
 import Icon from "@shared/icon.astro";
 import PlaceholderImage from "@components/card-index/card-index-placeholder.png";
-import type { CollectionKey } from "astro:content";
+import { getTreeNode } from "@mws-astro/util";
+// import type { CollectionKey } from "astro:content";
 // import { type TreeNode } from "@mws-astro/middleware";
 
 interface Props {
@@ -33,7 +34,7 @@ var cards;
 
 // @ts-ignore
 if (!ENV_BOOKSHOP_LIVE) {
-    const tree = Astro.locals.tree;
+    // const tree = Astro.locals.tree;
     // const data = Astro.locals.collections.pages;
     // let collection = target.split(":")[0];
     // if (!Object.keys(Astro.locals.collections).includes(collection))
@@ -41,30 +42,34 @@ if (!ENV_BOOKSHOP_LIVE) {
 
     const data = Object.values(Astro.locals.collections).flat();
 
-    const targetFragments = target
-        ?.split(":")
-        .at(-1)
-        ?.split("/")
-        .filter((frg) => frg !== "");
+    // const targetFragments = target
+    //     ?.split(":")
+    //     .at(-1)
+    //     ?.split("/")
+    //     .filter((frg) => frg !== "");
 
-    let cursor = tree;
-    if (!tree.children) return;
+    // let cursor = tree;
+    // if (!tree.children) return;
 
-    if (targetFragments !== undefined) {
-        for (let i = 0; i < targetFragments.length; i++) {
-            if (
-                !(
-                    cursor?.children !== undefined &&
-                    targetFragments[i] in cursor.children
-                )
-            ) {
-                console.warn(`Could not resolve path ${target}`);
-                break;
-            }
+    // if (targetFragments !== undefined) {
+    //     for (let i = 0; i < targetFragments.length; i++) {
+    //         if (
+    //             !(
+    //                 cursor?.children !== undefined &&
+    //                 targetFragments[i] in cursor.children
+    //             )
+    //         ) {
+    //             console.warn(`Could not resolve path ${target}`);
+    //             break;
+    //         }
 
-            cursor = cursor.children[targetFragments[i]];
-        }
-    }
+    //         cursor = cursor.children[targetFragments[i]];
+    //     }
+    // }
+
+    let cursor = getTreeNode(Astro.locals.tree, target);
+    console.log("card-index", target, cursor);
+    if (!cursor) return;
 
     const slugs =
         cursor.children &&
